# plume

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  flake.nix  justfile
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  release.yml
completions/: plume.bash  plume.fish  plume.zsh
include/plume/: app.hpp  cli.hpp  codec.hpp  color.hpp  config.hpp  error.hpp  ids.hpp  image.hpp  mcp.hpp  message.hpp  plugin.hpp  provider.hpp  sse.hpp  store.hpp  sync.hpp  terminal.hpp  theme.hpp  weave.hpp
man/: plume.1.scd
nix/: hm-module.nix  package.nix
plugins/translate/: init.lua  plugin.toml
plugins/wordcount/: init.lua  plugin.toml
scripts/: plugin-new.sh
src/: app.cpp  app_core.cpp  app_impl.hpp  app_input.cpp  app_models.cpp  app_render.cpp  app_tools.cpp  artifacts.cpp  cli.cpp  codec.cpp  color.cpp  composer.cpp  composer.hpp  config.cpp  cost_ui.cpp  error.cpp  extras_ui.cpp  http.cpp  http.hpp  ids.cpp  image.cpp  kitty_diacritics.hpp  library_ui.cpp  main.cpp  mcp.cpp  message.cpp  mouse.cpp  mouse.hpp  plugin.cpp  settings_ui.cpp  sidebar.cpp  sse.cpp  store.cpp  sync.cpp  terminal.cpp  theme.cpp  ui.cpp  ui.hpp  util_base64.hpp  weave.cpp  (+3 more)
src/provider/: anthropic.cpp  anthropic_stream.cpp  anthropic_stream.hpp  factory.cpp  mock.cpp  openai.cpp
tests/: test_codec.cpp  test_composer.cpp  test_config.cpp  test_image.cpp  test_mcp.cpp  test_plugin.cpp  test_provider_stream.cpp  test_sse.cpp  test_store.cpp  test_sync.cpp  test_ui.cpp  test_weave.cpp
themes/: rose-pine-dawn.toml  rose-pine-moon.toml  rose-pine.toml  va11.toml
